--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,24 @@
-# Use Node.js 18 as base image
-FROM node:18-alpine
+# Build stage
+FROM node:18-alpine AS builder
 
-# Set working directory
 WORKDIR /app
 
-# Copy package.json and install dependencies
+COPY package*.json ./
+RUN npm install
+
+COPY . .
+RUN npm run build
+
+# Production stage
+FROM node:18-alpine
+
+WORKDIR /app
+
 COPY package*.json ./
 RUN npm install --production
 
-# Copy rest of the code
-COPY . .
+COPY --from=builder /app/dist ./dist
 
-# Expose the application port
 EXPOSE 3000
 
-# Start the NestJS app
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "start:prod"]
