--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,24 +1,32 @@
-# Build stage
+# Use Node.js 18 as base image
 FROM node:18-alpine AS builder
 
+# Set working directory
 WORKDIR /app
 
+# Copy package.json and install dependencies
 COPY package*.json ./
 RUN npm install
 
+# Copy rest of the code
 COPY . .
+
+# Build the project
 RUN npm run build
 
-# Production stage
+# -----------------------------
+# Use a new, smaller image for production
 FROM node:18-alpine
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install --production
-
+# Copy only built files and node_modules
 COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/node_modules ./node_modules
+COPY package*.json ./
 
+# Expose the application port
 EXPOSE 3000
 
-CMD ["npm", "run", "start:prod"]
+# Start the compiled app
+CMD ["node", "dist/main"]
